- Bytecode editor: branch widening, indy graft, clone alignment